# quickview-link

./: CMakeLists.txt  main.cc  reader.cc  reader.h  readme.md
quickview_link_sdk/include/: quickview_link.h
webrtc_sdk/include/: webrtc_api.h
